--- a/Reflections/web-export/index.html
+++ b/Reflections/web-export/index.html
@@ -51,6 +51,7 @@
 // convenience function to get the id attribute of generated sketch html element
 function getProcessingSketchId () { return 'Reflections'; }
 </script>
+<script src="utils.js" type="text/javascript"></script>
 
 	</head>
 	<body>
@@ -67,7 +68,7 @@ function getProcessingSketchId () { return 'Reflections'; }
 	    	</div>
 			<h1>Reflections</h1>
     		<p id="description"></p>
-			<p id="sources">Source code: <a href="Reflections.pde">Reflections</a> </p>
+			<p id="sources">Source code: <a href="Reflections.pde">Reflections</a> <a href="utils.js">utils.js</a> </p>
 			<p>
 			Built with <a href="http://processing.org" title="Processing">Processing</a>
 			and <a href="http://processingjs.org" title="Processing.js">Processing.js</a>
